HF gives larger energies, I have accepted this.

--- a/source/tests/inputs/w_0.28_D_2_N_2_L_20.yaml
+++ b/source/tests/inputs/w_0.28_D_2_N_2_L_20.yaml
@@ -1,19 +1,27 @@
 E0: 1.141775155223939
 omega: 0.280000
-numbasis: 10
+# numbasis: 10
+numbasis: 6
 numparticles: 2
 dim: 2
 numparameters: 0
 maxitermc: 1000000
+# coeffs:
+#   -
+#     - -0.9719315454298729
+#     - -0
+#     - -0
+#     - -0.1663566515025766
+#     - -0
+#     - -0.1663566515025766
+#     - -0
+#     - -0
+#     - -0
+#     - -0
 coeffs:
-  -
-    - -0.9719315454298729
-    - -0
-    - -0
-    - -0.1663566515025766
-    - -0
-    - -0.1663566515025766
-    - -0
-    - -0
-    - -0
-    - -0
+- - -0.5142978321147631
+  - 0
+  - 0
+  - -0.0880276657706398
+  - 0
+  - -0.08802766577063978
